cmake_minimum_required(VERSION 3.15)
project(BigHW1)

set(CMAKE_CXX_STANDARD 14)


add_executable(BigHW1 main.cpp Num.h Num.cpp Num.h Multiplicator.cpp Multiplicator.h Experiment.cpp Experiment.h gradeSchoolMultiplication.cpp gradeSchoolMultiplication.h karatsubaMultiplication.cpp karatsubaMultiplication.h divideAndConquer.cpp divideAndConquer.h)